# continual-learning

./: .gitignore  CLAUDE.md  README.md  experiment_description.tex  instructions.txt  pyproject.toml  results.tex  run_drl.py  slurm.sh
Atari/: BENCHMARKING.md  evaluate_all.py  evaluation_results.csv  evaluation_results.tex  run_baselines_cross_game.py  run_baselines_cross_game.sh  run_ppo_cross_game.py  run_qr_dqn_continual.py  slurm.sh  task_utils.py  test_agent.py
Atari/models/: cnn_componet.py  cnn_simple.py  dino_encoder.py  packnet.py  progressive_net.py
FAME/: .gitignore
FAME/Atari/: benchmark_experiments.sh  cl_results_ALE-Freeway-v5_cnn-simple_1.json  cl_results_ALE-Freeway-v5_dino-simple_1.json  cl_results_ALE-Freeway-v5_packnet_1.json  eval_agent.py  eval_cross_game_seed.csv  slurm.sh  (+20 more)
continual_rl_benchmark/: pyproject.toml  slurm.sh
continual_rl_benchmark/configs/: config.yaml
continual_rl_benchmark/configs/method/: parseval.yaml
continual_rl_benchmark/experiments/: evaluate_or_train.py  hpc_run_all.py  hpc_run_all.sh  run_all.py  run_continualbench.py
continual_rl_benchmark/scripts/: generate_report.py
continual_rl_benchmark/src/: __init__.py
continual_rl_benchmark/src/agents/: dual_actor.py  fast_trac.py  parseval.py  world_model.py
continual_rl_benchmark/src/environments/: __init__.py  continual_env.py
continual_rl_benchmark/src/evaluation/: evaluator.py
continual_rl_benchmark/tests/: test_environment.py  test_metrics.py
experiments/: eval_qr_dqn_cross_game.sh  eval_qr_dqn_game.py  experiment_description.tex  generate_latex_table.py  hpc_run_all.py  run_all.py  run_qr_dqn.py  run_qr_dqn_cross_game.sh
qr_dqn/: __init__.py  agent.py  analyze_task_mastery.py  atari_wrapper.py  configs.py  continual_env.py  losses.py  network.py  replay.py  task_mastery.py  train.py
scripts/: plot_results.py
tests/: test_agents.py  test_qr_dqn.py
(+92 files in other folders)
